--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "react-native-web": "^0.14.1",
     "react-pdf": "^5.2.0",
     "react-web-config": "^1.0.0",
+    "resize-observer-polyfill": "^1.5.1",
     "rn-fetch-blob": "^0.12.0",
     "save": "^2.4.0",
     "underscore": "^1.10.2",
